Fix up part 2
