# src/docs/swagger.docs.json
@@ -1566,7 +1566,7 @@
                     },
                     "message": {
                       "type": "string",
-                      "example": "Volcano ID and eruption year are required parameters"
+                      "example": "Volcano ID and a valid eruption year are required parameters, and the eruption year must be both a number and a future year."
                     }
                   }
                 }
@@ -2256,17 +2256,25 @@
             "schema": {
               "type": "string"
             }
-          },
-          {
-            "name": "volcanoID",
-            "in": "path",
-            "description": "ID of the volcano to be deleted",
-            "required": true,
-            "schema": {
-              "type": "integer"
-            }
           }
         ],
+        "requestBody": {
+          "description": "Volcano ID to be added to favorites.",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "volcanoID": {
+                    "type": "integer",
+                    "example": 1
+                  }
+                }
+              }
+            }
+          }
+        },
         "security": [
           {
             "bearerAuth": []
@@ -2283,6 +2291,56 @@
                     "message": {
                       "type": "string",
                       "example": "Volcano with ID 1 removed from saved volcanoes"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Missing volcano ID.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": "true"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano ID is an required parameter"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MissingAuthHeader"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Volcano with the provided ID not found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "boolean",
+                      "example": "true"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Volcano with ID 1 not found"
                     }
                   }
                 }
